Finish the main job of  Article

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,39 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Blog</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-  <header class="shadow">
-    <%= image_tag "#{yield(:show_picture_name)}.jpg",
-                  class: "#{yield(:show_picture_name)}" %>
-    <ul id="nav">
-      <li><%= link_to '首页', root_path %></li>
-      <li><a href="#">说说</a></li>
-      <li><%= link_to '日志', articles_path %></li>
-      <li><a href="#">影评</a></li>
-      <li><a href="#">音乐</a></li>
-      <li><a href="#">留言</a></li>
-      <li><a href="#">关于</a></li>
-    </ul>
-    <div id="person-info">
-      <%= image_tag 'avatar.jpg', class: 'avatar'%>
-      <ul class="person-links">
-        <li><a target="_blank" href="http://jianshu.io/users/2n2RXH/">简书</a></li>
-        <li><a target="_blank" href="http://weibo.com/zeroxiobai" class="weibo">微博</a></li>
-      </ul>
-      <div class="person-text-info">
-        <h2>零小白</h2>
-        <p>喜欢 web 开发的本科生一枚，喜爱简洁的设计、javascript 、Ruby on Rails 和 linux。</p>
-      </div>
-    </div>
-  </header>
-
-<%= yield %>
-
-</body>
-</html>
+<%= render partial: 'shared/application',
+           locals: { show_picture_name: 'home_show_picture'} %>
