--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -14,29 +14,52 @@ ul, p, h1, h2, h3, h4, h5, h6{
 
 a{
   text-decoration: none;
+  &:hover{
+    text-decoration: none;
+  }
+}
+
+
+body{
+  font-size: 14px;
+  font-family: "微软雅黑", sans-serif;
 }
 
 $background_color: #ededed;
 $content-with: 980px;
 $blue-font-color: #218cdc;
+$gray-border-color: #e3e3e3;
+$gray-color: #9b9b9b;
 
 .main-box{
   width: $content-with;
   margin-left: auto;
   margin-right: auto;
+  overflow: visible;
+}
+
+.main-title{
+  text-align: center;
+  font-weight: normal;
+  margin-bottom: 20px;
+  font-size: 28px;
 }
 
 .shadow{
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
 }
 
-body{
+.main-container{
   background-color: $background_color;
-  font-size: 14px;
-  font-family: "微软雅黑", sans-serif;
 }
 
+.alert{
+  font-size: 12px;
+}
 
+.alert-error{
+  color: #f00;
+}
 
 header{
   @extend .main-box;
@@ -99,6 +122,7 @@ header{
 
   .person-text-info{
     margin-left: 112px;
+    overflow: visible;
 
     h2{
       font-size: 14px;
@@ -138,19 +162,28 @@ header{
 }
 
 .list-item{
-  width: $content-with;
-  margin: 20px auto 0 auto;
+  margin-top: 20px;
   background: white;
 }
 
 .article-item{
 
-  h2, .article-content, .article-info{
+  .article-container{
+    display: block;
+    color: inherit;
+
+    &:hover{
+      color: #08c;
+    }
+  }
+
+  .article-container, .article-info{
     padding: 0 10px;
   }
 
   .article-content{
-    margin-bottom: 10px;
+    max-height: 96px;
+    margin-bottom: 5px;
   }
 
   h2{
@@ -165,13 +198,46 @@ header{
 }
 
 .article-info{
-  border-top: 2px solid #e3e3e3;
+  border-top: 2px solid $gray-border-color;
 
-  em{
+  em, a{
     display: block;
     font-style: normal;
     line-height: 30px;
     font-size: 12px;
+  }
+
+  a{
+    width: 16px;
+    text-indent: -999px;
+    float: left;
+  }
+
+  a, .comment{
+    height: 16px;
+    background: url(main-icon.png) no-repeat;
+    margin: 7px 0 7px 7px;
+  }
+
+  .edit{
+    background-position: 0 -30px;
+    &:hover{
+      background-position: 0 -46px;
+    }
+  }
+
+  .destroy{
+    background-position: -16px -30px;
+    &:hover{
+      background-position: -16px -46px;
+    }
+  }
+
+  .new{
+    background-position: -32px -30px;
+    &:hover{
+      background-position: -32px -46px;
+    }
   }
 
   .time{
@@ -180,5 +246,171 @@ header{
 
   .comment{
     float: right;
+    line-height: 16px;
+    text-indent: 18px;
+    background-position: -48px -30px;
+  }
+
+  .tag{
+    float: right;
+    margin: 5px;
+    line-height: 20px;
+    background: $gray-color;
+    color: white;
+    padding: 0 4px;
+    border-radius: 3px;
+  }
+}
+
+.edit-content{
+  padding: 20px 20px 0;
+}
+
+.edit-form{
+  vertical-align: middle;
+
+  &>div{
+    margin-bottom: 20px;
+  }
+
+  label{
+    float: left;
+    margin-right: 15px;
+  }
+
+  input, label{
+    margin-bottom: 0;
+  }
+
+  input[type='text']{
+    color: black;
+  }
+
+  .qeditor_border{
+    margin-left: 43px;
+    padding-bottom: 0;
+  }
+
+  .qeditor_preview{
+    border: 1px solid #ccc;
+    height: 400px;
+    border-radius: 4px;
+    padding: 10px;
+
+    &:focus{
+      border-color: rgba(82,168,236,0.8);
+      outline: 0;
+      outline: thin dotted \9;
+      -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+      -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+      box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+    }
+
+    p{
+      line-height: 24px;
+      margin-bottom: 10px;
+    }
+  }
+
+  .btn{
+    margin-right: 10px;
+    float: right;
+  }
+
+  .field_with_errors{
+    display: inline;
+
+    input, .qeditor_preview{
+      border: 1px red solid;
+      &:focus{
+        box-shadow: none;
+      }
+    }
+  }
+}
+
+#article-content{
+  font-size: 16px;
+
+  p{
+    line-height: 24px;
+    margin: 0 0 10px;
+  }
+}
+
+// 评论区样式
+
+#comment-content{
+  padding: 20px;
+
+  .comment-title{
+    line-height: 30px;
+    font-weight: normal;
+    font-size: 16px;
+    border-bottom: 2px solid $gray-border-color;
+  }
+
+  em{
+    font-style: normal;
+  }
+
+  .comment-info{
+    line-height: 24px;
+  }
+
+  .comment-index{
+    float: right;
+  }
+
+  .comment-name{
+    font-weight: bold;
+  }
+
+  .comment-index, .comment-time, .comment-name{
+    color: $gray-color;
+  }
+
+  .comment-index, .comment-time{
+    font-size: 12px;
+  }
+
+  .comment-text{
+    line-height: 28px;
+    margin: 5px 0;
+  }
+
+  .comment-box{
+    border-bottom: 1px solid $gray-border-color;
+  }
+
+  .comment-form{
+    padding: 20px 0 0;
+
+    form{
+      margin: 0;
+    }
+  }
+
+  .left-box{
+    height: 80px;
+    width: 220px;
+    float: left;
+
+    input{
+      margin-bottom: 20px;
+    }
+  }
+
+  .right-box{
+    margin-left: 240px;
+
+    textarea{
+      width: 686px;
+      height: 68px;
+    }
+  }
+
+  .submit{
+    text-align: right;
   }
 }
