--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@article, html: { class: 'edit-form' }) do |f| %>
+<%= form_for(@article, html: { class: 'form article-form' }) do |f| %>
   <div>
     <%= f.label :title, '标题' %>
     <%= f.text_field :title %>
