--- a/app/views/shared/_application.html.erb
+++ b/app/views/shared/_application.html.erb
@@ -14,26 +14,24 @@
       <li><a href="#">音乐</a></li>
       <li><a href="#">留言</a></li>
       <li><a href="#">关于</a></li>
+      <% if signed_in? %>
+      <li><%= link_to '管理', user_path %></li>
+      <li><%= link_to '注销', signout_path %></li>
+      <%end %>
     </ul>
-    <div id="person-info">
-      <% blogger = find_blogger %>
-      <%= image_tag blogger.img_url, class: 'avatar'%>
-      <ul class="person-links">
-        <li><a target="_blank" href="http://jianshu.io/users/2n2RXH/">简书</a></li>
-        <li><a target="_blank" href="http://weibo.com/zeroxiobai" class="weibo">微博</a></li>
-      </ul>
-      <div class="person-text-info">
-        <h2><%= blogger.name %></h2>
-        <p><%= blogger.signature %></p>
-      </div>
-    </div>
+
+    <%= render 'shared/person_info' %>
   </header>
 
   <div class="main-box">
+    <div class="alert-content">
+      <%= render 'shared/alert' %>
+    </div>
+
     <%= yield %>
   </div>
 
-  <!-- <%= debug params %> -->
+  <%= debug params %>
 
 </body>
 </html>
