--- a/app/views/shared/_application.html.erb
+++ b/app/views/shared/_application.html.erb
@@ -8,7 +8,7 @@
                   class: "#{show_picture_name}" %>
     <ul id="nav">
       <li><%= link_to '首页', root_path %></li>
-      <li><a href="#">说说</a></li>
+      <li><%= link_to '说说', microposts_path %></li>
       <li><%= link_to '日志', articles_path %></li>
       <li><a href="#">影评</a></li>
       <li><a href="#">音乐</a></li>
@@ -31,7 +31,7 @@
     <%= yield %>
   </div>
 
-  <%= debug params %>
+  <!-- <%= debug params %> -->
 
 </body>
 </html>
