--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,7 @@
 <%= provide(:page_title, '文章') %>
 
+<div class="create-btn">
+  <%= link_to '新建文章', new_article_path, class: 'btn btn-success' %>
+</div>
+
 <%= render partial: 'shared/article', collection: @articles %>
