--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,2 +1,2 @@
 <%= render partial: 'shared/application',
-           locals: { show_picture_name: 'home_show_picture'} %>
+           locals: { background_style: 'home'} %>
