--- a/app/views/layouts/film_reviews.html.erb
+++ b/app/views/layouts/film_reviews.html.erb
@@ -1,2 +1,2 @@
 <%= render partial: 'shared/application',
-           locals: {show_picture_name: 'article_show_picture'} %>
+           locals: { background_style: 'film_review' } %>
