--- a/app/views/shared/_head_content.html.erb
+++ b/app/views/shared/_head_content.html.erb
@@ -1,8 +1,7 @@
 <head>
   <title><%= full_title(yield :page_title) %></title>
-  <!-- <%= stylesheet_link_tag    'http://cdn.staticfile.org/twitter-bootstrap/2.3.2/css/bootstrap.min.css' %> -->
-  <!-- <%= stylesheet_link_tag    'http://cdn.staticfile.org/font-awesome/4.0.3/css/font-awesome.min.css' %> -->
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'skin_compiling', media: 'all', 'data-turbolinks-track' => false %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
